--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous"/>
-
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>Weather-Dashboard</title>
 </head>
 <body>
     <body>
-        <div id="header" class="bg-light p-5 text-center">
+        <div id="header" class="bg-info p-5 text-info">
             <h1 id="header-text" class="display-5"></h1>
             <div id="artist-credit"></div>
     
@@ -24,7 +24,7 @@
                         <label for="search-city" class="form-label">Search for a City:</label>
                         <div class="input-group mb-3">
                             <input id="search-city" class="form-control" name="city" value="Austin" />
-                            <button id="search-button" class="btn btn-primary" type="submit"><i class="fas fa-search"></i></button>
+                            <button id="search-button" class="btn btn-info" type="submit"><i class="fas fa-search"></i></button>
                         </div>
                     </form>
                     <div id='search-city'></div>
@@ -32,7 +32,7 @@
                     <a id="clear-storage" href="#" class="d-block mt-3">Clear</a>    
                 </div>
               <div id="content-right" class="col-md-9 pt-4">
-                    <div id="current-weather" class="border rounded p-3"></div>
+                    <div id="current-weather" class="border-info rounded p-3"></div>
                     <div id="five-day-forecast" class="mt-5"></div>
                 </div>
             </div>
